F62 | Added Rate Of Change indicator to optimum visuals and fixed the calculation causing the __current text to be misaligned with the range input value

--- a/app/assets/stylesheets/_optimum-visualisation.scss
+++ b/app/assets/stylesheets/_optimum-visualisation.scss
@@ -1,35 +1,40 @@
 .optimum-vis {
+  margin-bottom: 20px;
+
   &__meta {
     width: 15%;
     display: inline-block;
   }
   &__visual {
     width: 80%;
-    padding: 20px 45px;
     display: inline-block;
     position: relative;
   }
 
-  &__min,
-  &__max,
   &__current {
     position: absolute;
-    line-height: 68px;
+    line-height: 30px;
     top: 0;
+    margin-left: -15px;
+    text-align: center;
+    color: #000;
+    font-size: 14px;
+    width: 30px;
   }
 
   &__min {
-    left: 0px;
+    float: left;
   }
   &__max {
-    right: 0px;
+    float: right;
   }
 
-  &__current {
-    margin-left: -65px;
-    text-align: center;
-    color: #fff;
-    font-size: 14px;
+  &__ROC {
+    position: absolute;
+    top: 10px;
+    background-color: #ccc;
+    height: 8px;
+    border-radius: 8px;
   }
 
   // ===== REMOVE EXISTING BROWSER DEFAULTS ======
@@ -62,11 +67,11 @@
   input[type=range]::-webkit-slider-thumb {
     -webkit-appearance: none;
     border: none;
-    height: 40px;
-    width: 40px;
+    height: 20px;
+    width: 20px;
     border-radius: 20px;
     background: #6FCF97;
-    margin-top: -16px; /* You need to specify a margin in Chrome, but in Firefox and IE it is automatic */
+    margin-top: -5px; /* You need to specify a margin in Chrome, but in Firefox and IE it is automatic */
   }
 
   &.--outside {
